[package]
name = "futurecop_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
iced-x86 = "1.21.0"
lazy_static = "1.5.0"
log = "0.4.22"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "System",
    "Win32_System_Diagnostics_ToolHelp"
]

[dependencies.mlua]
version = "0.9.1"
features = ["luau", "async", "serialize", "unstable"]
