[package]
name = "futurecop_mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
axum = {version = "0.6.20", features = ["ws", "headers"]}
axum-extra = {version = "0.8.0"}
chrono = "0.4.31"
device_query = "2.0.0"
futurecop_hook = { version = "0.1.0", path = "../futurecop_hook" }
futurecop_data = { version = "0.1.0", path = "../futurecop_data" }
futures = "0.3.30"
headers = "0.3.9"
humantime = "2.1.0"
iced-x86 = "1.20.0"
json = "0.12.4"
lazy_static = "1.4.0"
log = { version = "0.4.22", features = ["kv"] }
log4rs = { version = "1.3.0", features = ["file_appender"] }
nalgebra = "0.33.0"

num = "0.4.1"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.32.0", features = ["full"]}
tokio-util = {version = "0.7.10", features = ["io"]}
toml = "0.8.10"
walkdir = "2.4.0"
zip = "0.6.6"

[dependencies.mlua]
version = "0.9.1"
features = ["luau", "async", "serialize", "unstable"]

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "System",
    "Win32_System_Diagnostics_ToolHelp"
]
