[package]
name = "futuremod"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "futuremod"
path = "src/main.rs"
bench = false
test = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-tungstenite = {version = "0.23.0", features = ["tokio-runtime"]}
chrono = "0.4.38"
clap = { version = "4.4.18", features = ["derive"] }
dialog = "0.3.0"
fern = {version = "0.6.2", features = ["colored"]}
futuremod_data = { version = "0.1.0", path = "../futuremod_data" }
futures = "0.3.30"
humantime = "2.1.0"
iced = {version = "0.12.0", features = ["tokio"]}
iced_aw = {version = "0.8.0", features = ["icons", "modal", "card", "menu", "drop_down"]}
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.19.0"
palette = "0.7.5"
reqwest = {version = "0.11.22", features = ["json", "stream"]}
rfd = "0.12.1"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "*", features = ["full"]}
tokio-util = { version = "0.7.10", features = ["codec"] }
toml = "0.8.19"

[dependencies.windows]
version = "0.51.1"
features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation", "Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader"]
